[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/Logo.png" type="Texture" id=1]
[ext_resource path="res://Board.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_strength = 0.85
glow_blend_mode = 0

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 3 )

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.243137, 0.384314, 1 )

[node name="LogoCards" type="Control" parent="."]
margin_left = 127.0
margin_top = 88.0
margin_right = 167.0
margin_bottom = 128.0
rect_rotation = 13.2

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 133, 83 )
rotation = -0.261799
scale = Vector2( 0.161, 0.161 )
texture = ExtResource( 1 )

[node name="Cards" type="Control" parent="."]
margin_left = 360.0
margin_top = 160.0
margin_right = 400.0
margin_bottom = 200.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="SetButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 46.0
margin_top = -92.0
margin_right = 222.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 2 )
text = "SET!"

[node name="NoSetButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -92.0
margin_right = 17.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 3 )
text = "NO SET FOUND"

[node name="TimerPanel" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -122.0
margin_top = 21.0
margin_right = -22.0
margin_bottom = 121.0
color = Color( 0.156863, 0.12549, 0.176471, 1 )

[node name="TimerLabel" type="Label" parent="TimerPanel"]
margin_left = 12.0
margin_top = 11.0
margin_right = 88.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 4 )
text = "14"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="TimerPanel"]
one_shot = true

[node name="PointLabels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Player1" type="Control" parent="PointLabels"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -84.0
margin_right = 72.0
margin_bottom = -44.0

[node name="Name" type="Label" parent="PointLabels/Player1"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player1"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Player2" type="Control" parent="PointLabels"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -84.0
margin_right = -192.0
margin_bottom = -44.0

[node name="Name" type="Label" parent="PointLabels/Player2"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player2"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Player3" type="Control" parent="PointLabels"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -12.0
margin_right = 72.0
margin_bottom = 28.0

[node name="Name" type="Label" parent="PointLabels/Player3"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player3"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Player4" type="Control" parent="PointLabels"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -12.0
margin_right = -192.0
margin_bottom = 28.0

[node name="Name" type="Label" parent="PointLabels/Player4"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player4"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Player5" type="Control" parent="PointLabels"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 60.0
margin_right = 72.0
margin_bottom = 100.0

[node name="Name" type="Label" parent="PointLabels/Player5"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player5"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Player6" type="Control" parent="PointLabels"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -232.0
margin_top = 60.0
margin_right = -192.0
margin_bottom = 100.0

[node name="Name" type="Label" parent="PointLabels/Player6"]
margin_left = 12.0
margin_top = 11.0
margin_right = 182.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 5 )
text = "WWWWWWWWWW"
align = 1
valign = 1

[node name="Score" type="Label" parent="PointLabels/Player6"]
margin_left = 12.0
margin_top = 35.0
margin_right = 182.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="NotificationLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -237.0
margin_top = 53.0
margin_right = 237.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -197.0
margin_right = 271.0
margin_bottom = 197.0

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -237.0
margin_top = 11.0
margin_right = 237.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 6 )
text = "GAME OVER"
align = 1
valign = 1

[node name="FinalRankingLabel" type="Label" parent="GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -237.0
margin_top = 53.0
margin_right = -103.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 7 )
text = "Final Ranking:"
align = 1
valign = 1

[node name="NumberLabels" type="VBoxContainer" parent="GameOverPanel"]
margin_left = 30.0
margin_top = 88.0
margin_right = 70.0
margin_bottom = 170.0
custom_constants/separation = 10

[node name="Label1" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_right = 40.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 8 )
text = "1."
align = 1
valign = 1

[node name="Label2" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_top = 37.0
margin_right = 40.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "2."
align = 1
valign = 1

[node name="Label3" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_top = 74.0
margin_right = 40.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 8 )
text = "3."
align = 1
valign = 1

[node name="Label4" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_top = 111.0
margin_right = 40.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 8 )
text = "4."
align = 1
valign = 1

[node name="Label5" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_top = 148.0
margin_right = 40.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "5."
align = 1
valign = 1

[node name="Label6" type="Label" parent="GameOverPanel/NumberLabels"]
visible = false
margin_top = 185.0
margin_right = 40.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 8 )
text = "6."
align = 1
valign = 1

[node name="NameLabels" type="VBoxContainer" parent="GameOverPanel"]
margin_left = 62.0
margin_top = 88.0
margin_right = 102.0
margin_bottom = 300.0
custom_constants/separation = 10

[node name="Label1" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_right = 190.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="Label2" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_top = 37.0
margin_right = 190.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="Label3" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_top = 74.0
margin_right = 190.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="Label4" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_top = 111.0
margin_right = 190.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="Label5" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_top = 148.0
margin_right = 190.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="Label6" type="Label" parent="GameOverPanel/NameLabels"]
visible = false
margin_top = 185.0
margin_right = 190.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 8 )
text = "WWWWWWWWWW"
valign = 1

[node name="PlayAgainButton" type="Button" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 35.0
margin_top = -92.0
margin_right = 240.0
margin_bottom = -25.0
custom_fonts/font = SubResource( 9 )
text = "PLAY AGAIN"

[connection signal="pressed" from="SetButton" to="." method="_on_SetButton_pressed"]
[connection signal="pressed" from="NoSetButton" to="." method="_on_NoSetButton_pressed"]
[connection signal="timeout" from="TimerPanel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GameOverPanel/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
